Actualziacion menu/vistas/back

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:as400://10.192.2.137
 spring.datasource.username=wasgrafico
 spring.datasource.password=qdft58ty1g
 spring.datasource.driver-class-name=com.ibm.as400.access.AS400JDBCDriver
-
+spring.datasource.hikari.connection-test-query: values 1
 
 
 #Configuracion BD Server WAS
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=com.ibm.as400.access.AS400JDBCDriver
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=SJLMPB0007
+spring.jpa.properties.hibernate.default_schema=CDJSTRV1
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
 
