--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
 		    <artifactId>jt400</artifactId>
 		    <version>11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
