--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+schedule.cron=0 0/5 * * * ?
+schedule.timezone=America/Mexico_City
+
 # ===============================
 # = DATA SOURCE
 # ===============================
